LayoutTests/imported/w3c/web-platform-tests/mediacapture-streams/MediaDevices-IDL-enumerateDevices-expected.txt
Description

This test checks for the presence of the navigator.mediaDevices.enumerateDevices() method.


FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 147, since `interface NavigatorUserMedia`:
Navigator implements NavigatorUserMedia;
^ Unrecognised tokens"

